betta-0.0.4.scss
/*---------------------------------------
Betta CSS

A collection of CSS styles.

A project by Isak Combrinck & Dahman Ramdani.

V 0.0.4 (early alpha)

NOTE: only compile this file.
E.g. sass --watch betta-0.0.4.scss betta-0.0.4.css

### Deprecated
- #page, use main instead
- .material-icons-round, use .icon instead
- .custom-icon, use .icon instead

TEMP is used to denote properties that need to be changed
---------------------------------------*/

@import 'normalize';

/*---------------------------------------
	Colors
---------------------------------------*/

$color-main: #212121 !default;
$color-secondary: #e0e0e0 !default;
$color-accent: #f5f5f5 !default;
$color-background: #ffffff !default;
$color-active: #eeeeee !default;

/*---------------------------------------
  Shady stuff
---------------------------------------*/
/* level 0 */
$shadow-level-0: 0 0 0 0 rgba(0,0,0,0.2);

/* level 1 */
$shadow-level-1: 0 1px 3px 1px rgba(0,0,0,0.2);

/* level 2 */
$shadow-level-2: 0 2px 6px 1px rgba(0,0,0,0.2);

/* level 2 inversed */
$shadow-level-2-i: 0 -2px 6px 1px rgba(0,0,0,0.2);

/*---------------------------------------
  Font sizing
---------------------------------------*/
$font-small: 0.8rem;
$line-height: 1.6rem;

/*---------------------------------------
  Transitions
---------------------------------------*/
$transition-fast: 0.1s;
$transition-default: 0.2s;
$transition-slow: 0.3s;


/*-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-
    Default HTML
-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-*/

body {
  margin: 0;
  font-size: 16px;
}

#page,
main {
	padding: 3rem 2rem;
	overflow-x: hidden;
}

main {
	max-width: 100%;
}

@media(max-width: 800px) {
    #page,
    main {
        padding: 0 2rem 6rem 2rem;
        overflow-x: hidden;
    }
}

@media(max-width: 600px) {
    #page,
    main {
        padding: 0 1rem 4rem 1rem;
    }
}

body, nav, main, div, article, section,
header, button, ul, li, a, p, img {
	box-sizing: border-box;
}

i {
	vertical-align: top;
}

i, img, picture, button, button>span, .click-plane, details>summary,
nav>ul, nav>ul>li, nav>ul>li>a, article>a {
	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
	-webkit-tap-highlight-color: transparent;
	-webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

article {
    width: 100%;
    max-width: 30rem;
	margin: 0 auto;
}

article.wide {
    width: 100%;
	max-width: 55rem;
	margin: 0 auto;
}

ul {
	margin-top: 1.6rem;
	margin-bottom: 1.6rem;
	padding-left: 2rem;
}

li {
	list-style-type: disc;
}

/*---------------------------------------
	Typographical Elements
---------------------------------------*/
h1, h2, h3, h4, h5, h6, p, a, li, textarea, option, input, select, button {
	color: $color-main;
}

a {
  text-decoration: none;
  transition: $transition-default;
}

em {
  font-style: normal;
  font-weight: bold;
  letter-spacing: 0.05rem;
}

p, li, textarea, option, input, select, button {
  	font-size: 1rem;
	letter-spacing: 0.025rem;
}

p, li, input, textarea {
  	line-height: $line-height;
}

p {
	margin-top: 1.6rem;
	margin-bottom: 1.6rem;
}

p.small {
    font-size: $font-small;
}

ul.indent {
    margin-top: 0;
    padding-left: 1rem;
}

ul.plain li {
    list-style: none;
}

p>a,
h1>a,
h2>a,
h3>a,
h4>a,
h5>a,
h6>a,
li.link>a {
	border-bottom-style: solid;
	border-bottom-width: 2px;
	border-color: $color-secondary;
}

h1>a,
h2>a,
h3>a,
h4>a,
h5>a,
h6>a {
	border-bottom-width: 4px;
}

p>a:hover,
h1>a:hover,
h2>a:hover,
h3>a:hover,
h4>a:hover,
h5>a:hover,
h6>a:hover,
li.link:hover>a {
	border-color: $color-main;
}

p>a.icon {
	border: none;
}

p>a.icon>img {
	width: 2rem;
	transition: $transition-default;
}

p>a.icon:hover>img {
	opacity: 0.8;
}

h1, h2, h3, h4, h5, h6 {
	margin-bottom: 0;
}

h1 {
	font-size: 2.5rem;
	line-height: 3.2rem;
	letter-spacing: 0.1rem;
	margin-top: 3.2rem;
}

h2 {
	font-size: 2rem;
	line-height: 2.75rem;
	letter-spacing: 0.075rem;
	margin-top: 2.5rem;
	margin-bottom: 0.8rem
}

h3 {
	font-size: 1.6rem;
	line-height: 2.15rem;
	letter-spacing: 0.05rem;
	margin-top: 2.15rem;
}

h4 {
	font-size: 1.25rem;
	line-height: 1.75rem;
	letter-spacing: 0.05rem;
	margin-top: 1.75rem;
}

h5 {
	font-size: 1rem;
	line-height: $line-height;
	letter-spacing: 0.05rem;
	margin-top: 1.6rem;
}

h6 {
	font-size: 1rem;
	line-height: $line-height;
	letter-spacing: 0.05rem;
	text-transform: uppercase;
	margin-top: 1.6rem;
}

hr {
    border: none;
    height: 3px;
    background: $color-secondary;
}

/*
@media(max-width: 800px) {
  h1 {
	  font-size: 2.25rem;
	  line-height: 3rem;
	  letter-spacing: 0.035rem;
  }
}

@media(max-width: 600px) {
  h1 {
	  font-size: 1.75rem;
	  line-height: 2.5rem;
  }
}
*/

form>a {
	font-size: $font-small;
}

details>summary {
	outline: none;
	cursor: pointer;
	margin-bottom: -0.75rem;
}


details>summary>h1,
details>summary>h2,
details>summary>h3,
details>summary>h4,
details>summary>h5,
details>summary>h6,
details>summary>p {
	display: inline-block;
}

details>summary>p {
	margin-bottom: 0;
}

details {
	margin-bottom: 1.6rem;
	border-bottom: 0.7rem solid $color-secondary;
}

/*-------------------------------------*/

/*---------------------------------------
	header
---------------------------------------*/
header {
    width: 100%;
    margin: 0 auto;
    padding-top: 3rem;
}

header.hero {
    text-align: center;
}

header.hero img {
    width: 100%;
    padding: 0 2rem;
}

header.hero>h1 {
    font-size: 6rem;
    padding-bottom: 7rem;
    font-style: italic;
    letter-spacing: 0.35rem;
    text-transform: uppercase;
    text-shadow: -2px -2px 2px rgba(0,0,0,0.2);
}

@media (max-width: 800px) {
    header.hero>h1 {
        font-size: 4rem;
        letter-spacing: 0.15rem;
        line-height: 5rem;
    }
}
/* ... */

